ui: GUI changes for FD

--- a/src/ui/SnifferTemplate.ui
+++ b/src/ui/SnifferTemplate.ui
@@ -33,13 +33,6 @@
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_10">
-    <item row="1" column="1">
-     <widget class="QLabel" name="labelSnifferXInterfaceValue">
-      <property name="text">
-       <string>None</string>
-      </property>
-     </widget>
-    </item>
     <item row="5" column="0">
      <widget class="QLabel" name="labelSnifferCountDescr">
       <property name="text">
@@ -95,13 +88,6 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="labelSnifferXInterfaceDescr">
-      <property name="text">
-       <string>Interface:</string>
-      </property>
-     </widget>
-    </item>
     <item row="3" column="0" colspan="2">
      <widget class="QPushButton" name="buttonSnifferXIgnoredPackets">
       <property name="text">
@@ -121,6 +107,13 @@
        </size>
       </property>
      </spacer>
+    </item>
+    <item row="1" column="0" colspan="2">
+     <widget class="QLabel" name="labelSnifferXInterfaceValue">
+      <property name="text">
+       <string>None</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
