--- a/src/ui/mainWindow.ui
+++ b/src/ui/mainWindow.ui
@@ -96,7 +96,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>7</number>
     </property>
     <widget class="QWidget" name="tabMain">
      <property name="sizePolicy">
@@ -1258,6 +1258,172 @@
          </property>
          <property name="text">
           <string>None</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tabUDS">
+     <attribute name="title">
+      <string>UDS</string>
+     </attribute>
+     <widget class="QTableView" name="tableViewUDSData">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>791</width>
+        <height>301</height>
+       </rect>
+      </property>
+      <property name="contextMenuPolicy">
+       <enum>Qt::CustomContextMenu</enum>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>100</number>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+     </widget>
+     <widget class="QWidget" name="layoutWidget_3">
+      <property name="geometry">
+       <rect>
+        <x>810</x>
+        <y>10</y>
+        <width>346</width>
+        <height>303</height>
+       </rect>
+      </property>
+      <layout class="QGridLayout" name="gridLayoutUDS">
+       <item row="1" column="1" colspan="3">
+        <widget class="QComboBox" name="comboBoxUDSMode">
+         <item>
+          <property name="text">
+           <string>User specificed mask</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>11 bit IDs</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>29 bit IDs</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="15" column="0" colspan="2">
+        <widget class="QPushButton" name="buttonUDSTabToggleFuzzing">
+         <property name="text">
+          <string>Start</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="labelUDSTabMode">
+         <property name="text">
+          <string>Mode</string>
+         </property>
+        </widget>
+       </item>
+       <item row="15" column="2" colspan="2">
+        <widget class="QPushButton" name="buttonUDSClear">
+         <property name="text">
+          <string>Clear</string>
+         </property>
+        </widget>
+       </item>
+       <item row="16" column="2" colspan="2">
+        <widget class="QLabel" name="labelUDSCountValue">
+         <property name="text">
+          <string>0</string>
+         </property>
+        </widget>
+       </item>
+       <item row="11" column="0" colspan="4">
+        <widget class="QLabel" name="labelUDSInterfaceValue">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string>None</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <spacer name="verticalSpacer_5">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="17" column="0">
+        <spacer name="verticalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="10" column="0" colspan="4">
+        <widget class="QPushButton" name="buttonUDSInterfaceSettings">
+         <property name="text">
+          <string>Interface settings</string>
+         </property>
+        </widget>
+       </item>
+       <item row="16" column="0" colspan="2">
+        <widget class="QLabel" name="labelUDSCountDescr">
+         <property name="text">
+          <string>Generated packets: </string>
+         </property>
+        </widget>
+       </item>
+       <item row="13" column="0" colspan="2">
+        <widget class="QLabel" name="labelUDSTabPacketGap">
+         <property name="text">
+          <string>Gap (ms)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="13" column="2" colspan="2">
+        <widget class="QDoubleSpinBox" name="doubleSpinBoxUDSPacketGap">
+         <property name="minimum">
+          <double>1.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>9000.000000000000000</double>
+         </property>
+        </widget>
+       </item>
+       <item row="12" column="2" colspan="2">
+        <widget class="QLineEdit" name="lineEditUDSTabUDSID"/>
+       </item>
+       <item row="12" column="0" colspan="2">
+        <widget class="QLabel" name="labUDSTabUDSID">
+         <property name="text">
+          <string>UDS CAN ID</string>
          </property>
         </widget>
        </item>
